# ray2

./: CMakeLists.txt  TracerThread.cpp  TracerThread.h  abstractItem.cpp  abstractItem.h  coatingItem.cpp  coatingItem.h  coatingItemLib.cpp  coatingItemLib.h  coatingNoItem.h  coatingNumCoeffsItem.cpp  coatingNumCoeffsItem.h  detectorIntensityItem.cpp  detectorIntensityItem.h  detectorItem.cpp  detectorItem.h  detectorItemLib.cpp  detectorItemLib.h  detectorVolumeIntensityItem.h  diffRayFieldItem.cpp  diffRayFieldItem.h  diffRayField_RayAiming_Item.cpp  diffRayField_RayAiming_Item.h  dockWidgetMacroSim.cpp  dockWidgetMacroSim.ui  dockWidget_Console.cpp  fieldItem.cpp  fieldItem.h  fieldItemLib.cpp  fieldItemLib.h  fieldLibraryContainer.cpp  fieldLibraryContainer.h  geomApertureArrayItem.cpp  geomApertureArrayItem.h  geomApertureStopItem.cpp  geomApertureStopItem.h  geomAsphericalSurfaceItem.cpp  geomAsphericalSurfaceItem.h  geomCadObjectItem.cpp  geomConePipeItem.cpp  (+109 more)
Tracer/src/: CMakeLists.txt  sampleConfig.h.in
Tracer/src/LexParser/: FlexZemax.c  LexZemaxNonSeq.l  LexZemax_old.l  ZemaxLexer.ncb  ZemaxLexer.vcproj  ito.lex
Tracer/src/LexParser/CVS/: Entries  Entries.Extra.Old  Entries.Old  Repository
Tracer/src/LexParser/Debug/: BuildLog.htm
Tracer/src/LexParser/Debug/CVS/: Entries  Entries.Extra  Repository
Tracer/src/LexParser/Release/: BuildLog.htm
Tracer/src/LexParser/Release/CVS/: Entries.Extra
Tracer/src/LexParser/include/: flexlexer.h
Tracer/src/LexParser/include/CVS/: Entries
Tracer/src/LexParser/lib/CVS/: Entries
Tracer/src/PropagationMath/: CMakeLists.txt
Tracer/src/PropagationMath/include/: PropagationMath.h  kernel.h
Tracer/src/PropagationMath/src/: PropagationMath.cpp  kernel.cu
Tracer/src/include/: kernel.h  macrosim_functions.h  macrosim_types.h  my_vector_functions.h  my_vector_types.h  optix.h  optix_cuda_interop.h  optix_device.h  optix_host.h
Tracer/src/include/internal/: optix_declarations.h  optix_defines.h  optix_internal.h
Tracer/src/include/optixu/: optixpp_namespace.h  optixu.h  optixu_math.h  optixu_math_namespace.h  optixu_vector_functions.h  optixu_vector_types.h
Tracer/src/ito_tracer/: ApertureStop.h  ApertureStop_intersect.h  AsphericalSurface.cpp  AsphericalSurface.h  CMakeLists.txt  Coating.h  CoatingLib.h  Coating_DispersiveNumCoeffs.h  Coating_FresnelCoeffs.cpp  Coating_FresnelCoeffs.h  Coating_NumCoeffs.cpp  Coating_NumCoeffs.h  Coating_NumCoeffs_hit.h  CompoundGeometry.cpp  CompoundGeometry.h  ConePipe.cpp  ConePipe.h  ConePipe_intersect.h  Converter.h  CylLenseSurface.cpp  CylLenseSurface.h  CylLenseSurface_intersect.h  CylPipe.cpp  CylPipe.h  CylPipe_intersect.h  Detector.cpp  Detector.h  DetectorParams.h  Detector_Intensity.cpp  Detector_PhaseSpace.h  Detector_Raydata.cpp  DiffRayField.cpp  DiffRayField.h  DiffRayField_RayAiming.cpp  DiffRayField_RayAiming.h  DiffRayField_RayAiming_Holo.cpp  DiffRayField_RayAiming_Holo.h  DiffRayField_RayAiming_Holo_test.cpp  DiffRayField_RayAiming_Holo_test.h  Field.cpp  (+154 more)
Tracer/src/ito_tracer/differentialRayTracing/: ApertureStop_DiffRays.h  AsphericalSurface_DiffRays.h  AsphericalSurface_DiffRays_intersect.h  Coating_DiffRays.cpp  Coating_NumCoeffs_DiffRays.cpp  Coating_NumCoeffs_DiffRays.h  ConePipe_DiffRays.cpp  ConePipe_DiffRays.h  CylPipe_DiffRays.cpp  CylPipe_DiffRays.h  DiffRayField_Freeform.cpp  DiffRayField_Freeform.h  GeometryLib_DiffRays.h  IdealLense_DiffRays.cu  IdealLense_DiffRays.h  MaterialAbsorbing_DiffRays.h  MaterialDiffracting_DiffRays.h  MaterialIdealLense_DiffRays.h  MaterialLinearGrating1D_DiffRays.h  MaterialReflecting_DiffRays.cpp  MaterialReflecting_DiffRays.h  MaterialReflecting_DiffRays_hit.h  MaterialRefracting_DiffRays.h  MaterialRefracting_DiffRays_hit.h  Material_DiffRays.cpp  Material_DiffRays.h  Material_DiffRays_Lib.h  PlaneSurface_DiffRays.cpp  PlaneSurface_DiffRays.cpp.bak  PlaneSurface_DiffRays.h  ScatterLib_DiffRays.h  Scatter_DiffRays.h  Scatter_DoubleCauchy1D_DiffRays.cpp  Scatter_Lambert2D_DiffRays.h  Scatter_TorranceSparrow1D_DiffRays.cpp  Scatter_TorranceSparrow1D_DiffRays_hit.h  SinusNormalSurface_DiffRays.cpp  SinusNormalSurface_DiffRays.h  SphericalSurface_DiffRays.h  apertureStop_DiffRays.cu  (+22 more)
Tracer/src/ito_tracer/include/: MacroSimLib.h
Tracer/src/ito_tracer/src/: ApertureStop.cpp  ApertureStop.h  ApertureStop_intersect.h  AsphericalSurface.cpp  AsphericalSurface.h  AsphericalSurface_intersect.h  Coating.cpp  Coating.h  CoatingLib.cpp  CoatingLib.h  Coating_DispersiveNumCoeffs.cpp  Coating_DispersiveNumCoeffs.h  Coating_FresnelCoeffs.h  Coating_NoCoating.cpp  Coating_NoCoating.h  Coating_NumCoeffs.cpp  Coating_NumCoeffs.h  CompoundGeometry.h  ConePipe.cpp  ConePipe.h  ConePipe_intersect.h  Converter.cpp  ConverterMath.cpp  CylLenseSurface.cpp  CylLenseSurface.h  CylPipe.cpp  CylPipe.h  CylPipe_intersect.h  Detector.cpp  Detector.h  DetectorLib.cpp  DetectorLib.h  DetectorParams.h  Detector_Field.cpp  Detector_Field.h  Detector_Intensity.cpp  Detector_Intensity.h  Detector_PhaseSpace.cpp  Detector_Raydata.cpp  Detector_Raydata.h  (+235 more)
Tracer/src/ito_tracer/src/differentialRayTracing/: ApertureStop_DiffRays.cpp  ApertureStop_DiffRays.h  ApertureStop_DiffRays_intersect.h  AsphericalSurface_DiffRays.cpp  AsphericalSurface_DiffRays.h  CoatingLib_DiffRays.cpp  CoatingLib_DiffRays.h  Coating_DiffRays.cpp  ConePipe_DiffRays.cpp  ConePipe_DiffRays.h  CylPipe_DiffRays.cpp  CylPipe_DiffRays.h  CylPipe_DiffRays_intersect.h  DiffRayField_Freeform.cpp  DiffRayField_Freeform.h  GeometryLib_DiffRays.cpp  GeometryLib_DiffRays.h  IdealLense_DiffRays.cpp  IdealLense_DiffRays.cu  IdealLense_DiffRays.h  MaterialAbsorbing_DiffRays.h  MaterialDiffracting_DiffRays.cpp  MaterialDiffracting_DiffRays.h  MaterialIdealLense_DiffRays.h  MaterialIdealLense_DiffRays_hit.h  MaterialLib_DiffRays.cpp  (+40 more)
Tracer/src/nvcommon/: CMakeLists.txt
Tracer/src/nvcommon/nvModel/: CMakeLists.txt
macrosim_tracer/PropagationMath/: CMakeLists.txt
macrosim_tracer/PropagationMath/include/: kernel.h
macrosim_tracer/PropagationMath/src/: PropagationMath.cpp  kernel.cu
(+852 files in other folders)
